--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
 name: gmap
+
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -22,14 +23,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  google_maps_flutter: ^0.5.25
-  geolocator: ^5.3.0
-  provider: ^4.0.4
-  url_launcher: ^5.4.2
-  http: ^0.12.0+4
-  flutter_rating_bar: ^3.0.1+1
-
+  cupertino_icons: ^1.0.2
+  google_maps_flutter: ^2.1.1
+  geolocator: ^8.0.5
+  provider: ^6.0.2
+  url_launcher: ^6.0.18
+  http: ^0.13.4
+  flutter_rating: ^0.0.2
+  firebase: ^9.0.2
+  geocoding: ^2.0.2
 
 dev_dependencies:
   flutter_test:
